# agentic-rtl-engine

./: .env.example  .gitignore  CLAUDE.md  PIPELINE.md  README.md  docs.md  main.py  pyproject.toml  requirements.txt
.claude/commands/: add-refinement-rule.md  check-tla.md  lint-rtl.md  (+2 more)
agentic_tests/: README.md  conftest.py  test_agent1_live.py  test_agent3_live.py  test_diagnoser_live.py  test_full_pipeline_live.py  test_refinement_convergence_live.py  test_stage_nodes_live.py
core/: CMakeLists.txt  README.md  build.sh
core/bindings/: module.cpp
core/include/rtlcore/: expr.hpp  obligations.hpp  spec_sim.hpp
core/src/: expr.cpp  obligations.cpp  spec_sim.cpp
core/tests/: test_core.cpp
docs/: README.md  TODO.md  agents.md  architecture.md  background.md  compiler1.md  compilers.md  current_problems.md  docs.md  feasible_architecture.dot  handoff_runtime_agents.md  layers_of_templates.md  refinement.md  refinement_rules.md  running.md  running_the_pipeline.md  status.md  test_suite_problems.md  verification.md
pipeline/: graph.py  llm.py  run_dirs.py  schemas.py  state.py  tools.py  usage.py
tests/: conftest.py  test_branch_collapse.py  test_catchall_sole_driver.py  test_cocotb_generator.py  test_cocotb_roundtrip.py  test_combinational_and_fifo.py  test_compiler2_correctness.py  test_compilers.py  test_dff.py  test_diagnoser_deterministic.py  test_end_to_end_offline.py  test_envelope.py  test_fix_wave_counter.py  test_fsm_reset_clock_repro.py  test_fsmd_multiplier.py  test_graph_routing.py  test_identity_hold_and_mod_regression.py  test_input_modeling_regression.py  test_live_counter_repro.py  test_loop_introduction.py  test_native_kernel.py  test_native_specsim.py  test_pass_templates.py  test_refinement_backtrack.py  test_refinement_convergence.py  test_register_file_codegen.py  test_reverse_bridge.py  test_run_dirs.py  test_soak.py  test_spec_sim.py  test_usage_ledger.py  test_verified_derivation.py
(+54 files in other folders)
